--- a/templates/teacher_modules.html
+++ b/templates/teacher_modules.html
@@ -44,6 +44,12 @@
                             <i class="bi bi-clock text-info"></i>
                             <span>{{ module.estimated_hours or 0 }}h</span>
                         </div>
+                        {% if module.has_textbook %}
+                        <div class="stat">
+                            <i class="bi bi-journal-book text-success" title="Textbook (RAG) attached"></i>
+                            <span>Textbook</span>
+                        </div>
+                        {% endif %}
                     </div>
 
                     <div class="d-flex gap-2 flex-wrap">
